--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -43,15 +43,15 @@ label=
 interval=1
 signal=1
 
-[wifi]
-interval=2
+#[wifi]
+#interval=2
 #label= 
 #min_width=  100%
 
-[batterybar]
-command=/home/jonatas/.config/i3/scripts/batterybar -c "#268bd2" -f "#839496" -a "#EEEEEE" -1 "#dc322f" -2 "#dc322f" -3 "#cb4b16" -4 "#cb4b16" -5 "#b58900" -6 "#839496"  -7 "#839496"  -8 "#839496"  
-interval=persist
-markup=pango
+#[batterybar]
+#command=/home/jonatas/.config/i3/scripts/batterybar -c "#268bd2" -f "#839496" -a "#EEEEEE" -1 "#dc322f" -2 "#dc322f" -3 "#cb4b16" -4 "#cb4b16" -5 "#b58900" -6 "#839496"  -7 "#839496"  -8 "#839496"  
+#interval=persist
+#markup=pango
 
 [date]
 command=date "+%a %d %b"
